create header component

--- a/prototype.html
+++ b/prototype.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="prototype.css">
+<link rel="stylesheet" href="styles/prototype.css">
 <body>
-   <header></header> 
+   <header>
+    <div class= "logo-name">
+        <a href="#">
+            <img src="https://coderacademy.edu.au/images/footerLogo.png" alt="CA">
+        </a>
+        <p class="name"> 
+            <span class="coder-text">Coder</span>
+            <span class="academy-text">Academy</span>    
+        </p>
+   </div>
+   <nav>
+        <a href="#">Home</a>
+        <a href="pages/services.html">Services</a>
+        <a href="pages/about.html">About</a>
+        <a href="pages/contact.html">Contact</a>
+   </nav>
+</header> 
     <main></main>
     <footer></footer>
    </body>
