--- a/prototype.html
+++ b/prototype.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--FontAwesome CDN-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <link rel="stylesheet" href="styles/prototype.css">
 <body>
@@ -24,8 +26,17 @@
         <a href="pages/contact.html">Contact</a>
    </nav>
 </header> 
-    <main></main>
-    <footer></footer>
+    <main>main</main>
+    <footer>
+    <div class="social-media">
+        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.linkedin.com" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+    </div>
+    <div class="info">
+        <p>Contact:040000000</p>
+        <p>Address 1 street at suburbia road 00000</p>
+    </div>
+    </footer>
    </body>
 </body>
 </html>
