--- a/prototype.html
+++ b/prototype.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <link rel="stylesheet" href="styles/prototype.css">
+<link rel="stylesheet" href="styles/main.css">
 <body>
    <header>
     <div class= "logo-name">
@@ -26,7 +27,16 @@
         <a href="pages/contact.html">Contact</a>
    </nav>
 </header> 
-    <main>main</main>
+    <main>
+        <section>
+        <div class="cover-photo">
+            <img src="https://images.unsplash.com/photo-1591439657848-9f4b9ce436b9?q=80&w=1902&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Laptop">
+        </div>
+        <div class="details">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias aspernatur maiores ducimus animi asperiores ab perferendis officia nam natus? Ipsam, consequuntur accusamus reiciendis saepe excepturi itaque nemo delectus ipsum quaerat.
+        </div>
+        </section>
+    </main>
     <footer>
     <div class="social-media">
         <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
