add contact form

--- a/pages/services.html
+++ b/pages/services.html
@@ -22,9 +22,9 @@
    </div>
    <nav>
         <a href="../prototype.html">Home</a>
-        <a href="pages/services.html">Services</a>
-        <a href="pages/about.html">About</a>
-        <a href="pages/contact.html">Contact</a>
+        <a href="#">Services</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
    </nav>
 </header> 
     <main>
